force-app/main/default/objects/QuoteLineItem/fields/DDOvernightAllowance__c.field-meta.xml
<CustomField>
    <fullName>DDOvernightAllowance__c</fullName>
    <label>DD Overnight Allowance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>