force-app/main/default/objects/QuoteLineItem/fields/DDTotalCost__c.field-meta.xml
<CustomField>
    <fullName>DDTotalCost__c</fullName>
    <formula>Quantity *  DDTotal__c *  PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>