force-app/main/default/objects/QuoteLineItem/fields/DDTravelAllowance__c.field-meta.xml
<CustomField>
    <fullName>DDTravelAllowance__c</fullName>
    <label>DD Travel Allowance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>