force-app/main/default/objects/QuoteLineItem/fields/Internal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost__c</fullName>
    <label>Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>