force-app/main/default/objects/QuoteLineItem/fields/OvernightAllowanceCost__c.field-meta.xml
<CustomField>
    <fullName>OvernightAllowanceCost__c</fullName>
    <formula>Quantity *  DDOvernightAllowance__c *  PricebookEntry.OvernightAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overnight Allowance Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>