force-app/main/default/objects/QuoteLineItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Revenue_Types</valueSetName>
    </valueSet>
</CustomField>