force-app/main/default/objects/QuoteLineItem/fields/Total_Internal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Cost__c</fullName>
    <formula>Quantity  *  Internal_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>