force-app/main/default/objects/QuoteLineItem/fields/TotalCostHR__c.field-meta.xml
<CustomField>
    <fullName>TotalCostHR__c</fullName>
    <label>Total Cost HR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>