force-app/main/default/objects/QuoteLineItem/fields/TotalInternalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalInternalCost__c</fullName>
    <formula>Quantity  *  InternalCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>