force-app/main/default/objects/QuoteLineItem/validationRules/Related_Quote_not_in_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Quote_not_in_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Quote.RecordType.DeveloperName = &quot;Links&quot;, 
   NOT(ISPICKVAL(Quote.Status, &quot;0&quot;)),
		 $User.Username != &apos;sysadmin@linksmt.it&apos;
)</errorConditionFormula>
    <errorMessage>HR Cost can&apos;t be edited if quote status is not in Draft</errorMessage>
</ValidationRule>