force-app/main/default/objects/QuoteLineItem/validationRules/WrongTotalDays.validationRule-meta.xml
<ValidationRule>
    <fullName>WrongTotalDays</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
DDTotal__c &lt;(DDOvernightAllowance__c + DDTravelAllowance__c ),
 Quote.RecordType.DeveloperName = &apos;Links&apos;,
 $User.Username != &apos;sysadmin@linksmt.it&apos;

)</errorConditionFormula>
    <errorMessage>Giorni totali Errati</errorMessage>
</ValidationRule>